--- a/ebeast/package.json.in
+++ b/ebeast/package.json.in
@@ -3,7 +3,7 @@
   "version":         "@MAJOR@.@MINOR@.@MICRO@",
   "description":     "Beast - Music Synthesizer and Composer",
   "main":            "main.js",
-  "dependencies":    { "electron": "^1.4.15" },
+  "dependencies":    { "electron": "^1.4.15", "mithril": "^1.0.1" },
   "devDependencies": { "node-gyp": "^3.5.0", "less": "^2.7.2",
 		       "eslint": "^3.16.1", "eslint-plugin-html": "^2.0.1" },
   "license":         "LGPL-3.0",
