--- a/ebeast/v8bse/Makefile.am
+++ b/ebeast/v8bse/Makefile.am
@@ -22,7 +22,7 @@ CLEANFILES += v8bse.cc *.pyc *.pyo
 v8bse_sources = nodemodule.cc
 v8bse_deps    = v8bse.cc binding.gyp
 v8bse_rmflags = -fno-exceptions -fno-rtti
-v8bse_incdirs = ../../ ./v8pp/ $(patsubst -%, , $(patsubst -I%, %, $(LIBBSE_CFLAGS)))
+v8bse_incdirs = ../../ ../../external/v8pp/ $(patsubst -%, , $(patsubst -I%, %, $(LIBBSE_CFLAGS)))
 v8bse_libs    = $(LIBBSE_LIBS) -L$(abs_top_builddir)/bse/.libs -lbse-@MAJOR@
 v8bse.node: $(v8bse_sources) $(v8bse_deps) ../node_modules/electron/dist/electron
 	$(AM_V_GEN)
