MISC: Dockerfile-apt.in: install libfluidsynth-dev for building beast
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/misc/Dockerfile-apt.in
+++ b/misc/Dockerfile-apt.in
@@ -37,7 +37,7 @@ RUN retry apt-get install -y \
     cython gawk libxml-parser-perl \
     libpango1.0-dev python2.7-dev libxml2-dev libreadline6-dev \
     libreadline-dev python-all-dev \
-    libasound2-dev libflac-dev libvorbis-dev libmad0-dev libgnomecanvas2-dev guile-1.8-dev
+    libasound2-dev libflac-dev libvorbis-dev libmad0-dev libgnomecanvas2-dev libfluidsynth-dev guile-1.8-dev
 ENV BINTRAY_REPO	"@BINTRAY_REPO@"
 ENV DISTRELEASE		"@DISTRELEASE@"
 # Install Rapicorn
