TOOLS: work around maintainer-clean removing included dependency file too early
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -18,6 +18,7 @@ bin_PROGRAMS        = bsewavetool
 bsewavetool_SOURCES = bsewavetool.cc bwtwave.cc bseloopfuncs.cc ../topbuildid.cc
 bsewavetool_LDADD   = $(progs_ldadd)
 EXTRA_DIST         += bsewavetool.hh bwtwave.hh bseloopfuncs.hh sfiutils.hh
+../.deps/topbuildid.Po: ; mkdir -p $(@D) && touch $@ # bad hack to fix maintainer-clean
 
 noinst_PROGRAMS  += cutvorbis
 cutvorbis_SOURCES = cutvorbis.cc
