TRAVIS: minor tweak to easily spot distcheck builds on travis-ci.org
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
   # INTENT: gccbuild clangbuild package bintrayup
   matrix:
     - DIST="ubuntu:wily"        INTENT="gccbuild,package,bintrayup"
-    - DIST="ubuntu:xenial"      INTENT="gccbuild,package,bintrayup,distcheck"
+    - DIST="ubuntu:xenial"      INTENT="distcheck,gccbuild,package,bintrayup"
     - DIST="debian:jessie"      INTENT="gccbuild,package,bintrayup"
     - DIST="ubuntu:yakkety"     INTENT="gccbuild,package,bintrayup"
     # test upcoming releases and get new compiler warnings
