--- a/Makefile.decl
+++ b/Makefile.decl
@@ -4,10 +4,9 @@
 EXTRA_HEADERS=
 MAINTAINERCLEANFILES=$(GENERATED)
 CLEANFILES=$(GENERATED_CLEANFILES)
-GENERATED_EXTRA_DIST=
 GENERATED_CLEANFILES=
-GENERATED=$(strip $(GENERATED_EXTRA_DIST) $(GENERATED_CLEANFILES))
-EXTRA_DIST=$(GENERATED_EXTRA_DIST)
+GENERATED=$(strip $(GENERATED_CLEANFILES))
+EXTRA_DIST=
 
 # Verbosity macros
 Q       = $(if $(findstring 1, $(V)) ,, @)
