TOOLS: avoid shipping generated ../topbuildid.cc
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -15,7 +15,8 @@ progs_ldadd     = ../bse/libbse-@MAJOR@.la $(LIBBSE_LIBS)
 #
 
 bin_PROGRAMS        = bsewavetool
-bsewavetool_SOURCES = bsewavetool.cc bwtwave.cc bseloopfuncs.cc ../topbuildid.cc
+bsewavetool_SOURCES = bsewavetool.cc bwtwave.cc bseloopfuncs.cc
+nodist_bsewavetool_SOURCES = ../topbuildid.cc
 bsewavetool_LDADD   = $(progs_ldadd)
 EXTRA_DIST         += bsewavetool.hh bwtwave.hh bseloopfuncs.hh sfiutils.hh
 ../.deps/topbuildid.Po: ; mkdir -p $(@D) && touch $@ # bad hack to fix maintainer-clean
