BSE: generate doc_sources.lst
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -127,6 +127,13 @@ EXTRA_DIST += $(strip \
 	gslincluder.hh	gslwaveosc-aux.cc			\
 )
 
+doc_sources = $(bse_idl_sources) $(bse_sources) $(bse_public_headers) bseapi.idl
+
+# == doc_sources.lst ==
+doc_sources.lst: Makefile
+	$(AM_V_GEN)
+	$(Q) echo $(patsubst %, bse/%, $(doc_sources)) > $@
+
 #
 # BSE library
 #
