DOCS: majorly simplify and speed up doxygen documentation generation
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/docs/doxygen.cfg
+++ b/docs/doxygen.cfg
@@ -1,5 +1,5 @@
 PROJECT_NAME		= "BEAST - Free Software Audio Synthesizer and Tracker"
-#OUTPUT_DIRECTORY      = doxyhtml/
+#OUTPUT_DIRECTORY	= doxyhtml/
 GENERATE_LATEX		= NO
 GENERATE_MAN		= NO
 GENERATE_RTF		= NO
@@ -10,6 +10,7 @@ CASE_SENSE_NAMES	= YES
 RECURSIVE		= YES
 FILE_PATTERNS		= *
 EXCLUDE			=
+CITE_BIB_FILES          = references.bib
 BUILTIN_STL_SUPPORT	= YES
 TYPEDEF_HIDES_STRUCT	= YES
 MAX_INITIALIZER_LINES   = 0
@@ -26,6 +27,9 @@ EXTRACT_ANON_NSPACES	= NO
 JAVADOC_AUTOBRIEF 	= YES
 QT_AUTOBRIEF		= YES
 ABBREVIATE_BRIEF	= YES
+BRIEF_MEMBER_DESC	= NO
+REPEAT_BRIEF		= YES
+ALWAYS_DETAILED_SEC	= YES
 HIDE_IN_BODY_DOCS	= YES
 WARN_IF_UNDOCUMENTED    = NO
 
@@ -33,30 +37,30 @@ INTERNAL_DOCS		= NO
 HIDE_UNDOC_MEMBERS	= NO
 HIDE_FRIEND_COMPOUNDS	= YES
 SHOW_USED_FILES 	= YES
-SHOW_DIRECTORIES 	= YES
 SHOW_INCLUDE_FILES	= YES
 INHERIT_DOCS		= YES
 ENABLED_SECTIONS	= ""
-MACRO_EXPANSION		= YES
-EXPAND_ONLY_PREDEF	= YES
-#ENABLE_PREPROCESSING	= YES
+REFERENCED_BY_RELATION	= YES
 
-PREDEFINED = DOXYGEN "record=struct" "sequence=struct" G_BEGIN_DECLS G_END_DECLS
-PREDEFINED += BSE_CXX_DECLARE_CLASS BSE_CXX_DECLARED_CLASS_TYPE BSE_CXX_DECLARED_ENUM_TYPE BSE_CXX_DECLARED_PROC_TYPE
-PREDEFINED += BSE_CXX_DECLARED_RECORD_TYPE BSE_CXX_DECLARED_SEQUENCE_TYPE BSE_CXX_DECLARE_ENUM BSE_CXX_DECLARE_PROC
-PREDEFINED += BSE_CXX_DECLARE_RECORD BSE_CXX_DECLARE_SEQUENCE BSE_CXX_DEFINE_EXPORTS BSE_CXX_DEFINE_STATIC_DATA BSE_CXX_EXPORT_IDENTITY
-PREDEFINED += BSE_CXX_INSTANCE_OFFSET BSE_CXX_REGISTER_EFFECT BSE_CXX_REGISTER_ENUM BSE_CXX_REGISTER_HOOK BSE_CXX_REGISTER_HOOK_NODE
-PREDEFINED += BSE_CXX_REGISTER_PROCEDURE BSE_CXX_REGISTER_RECORD BSE_CXX_REGISTER_SEQUENCE BSE_CXX_REGISTER_STATIC_HOOK
-PREDEFINED += BSE_CXX_TYPE_REGISTER BSE_CXX_TYPE_REGISTER_ABSTRACT BSE_CXX_TYPE_REGISTER_INITIALIZED BSE_CXX_TYPE_REGISTER_INTERN
-PREDEFINED += BSE__SPECIALIZE BSE_CXX_DEFINE_EXPORTS BSE_CXX_DEFINE_STATIC_DATA
+MACRO_EXPANSION		= YES
+PREDEFINED  = DOXYGEN RAPICORN_CONVENIENCE __SIZEOF_LONG__=8
+PREDEFINED += static_assert(x,y)= RAPICORN_STATIC_ASSERT(x)= RAPICORN_STARTUP_ASSERT(x)=
+PREDEFINED += "record=struct" "sequence=struct" "RAPICORN_PIXBUF_TYPE=Pixbuf" "G_BEGIN_DECLS=" "G_END_DECLS="
+PREDEFINED += "__attribute__(x)=" RAPICORN_CONST= RAPICORN_NORETURN= RAPICORN_NOINLINE= RAPICORN_PRINTF(x,y)=
+
+EXPAND_ONLY_PREDEF	= YES
+EXPAND_AS_DEFINED       =
+#ENABLE_PREPROCESSING	= YES
 
 #OPTIMIZE_OUTPUT_FOR_C	= YES
 
+DISABLE_INDEX		= YES
 #GENERATE_HTML          = YES
+GENERATE_TREEVIEW	= YES
 #HTML_OUTPUT            = html
 #HTML_FILE_EXTENSION    = .html
 #HTML_HEADER            =
-#HTML_FOOTER            =
+HTML_FOOTER            	= footer.html
 #HTML_STYLESHEET        =
 #HTML_COLORSTYLE_HUE    = 220
 #HTML_COLORSTYLE_SAT    = 100
@@ -65,7 +69,12 @@ PREDEFINED += BSE__SPECIALIZE BSE_CXX_DEFINE_EXPORTS BSE_CXX_DEFINE_STATIC_DATA
 #HTML_ALIGN_MEMBERS     = YES
 #HTML_DYNAMIC_SECTIONS  = NO
 
-HAVE_DOT		= YES
+INTERACTIVE_SVG		= YES
+DOT_IMAGE_FORMAT	= svg
+DOT_TRANSPARENT         = YES
+DOT_FONTNAME 		= "Verdana Bold"
+#DOT_FONTNAME            = "DejaVuSansMono Bold"
+DOT_FONTSIZE            = 11
 UML_LOOK		= NO
 CLASS_GRAPH		= YES
 COLLABORATION_GRAPH	= NO
@@ -78,5 +87,19 @@ DIRECTORY_GRAPH		= YES
 CALL_GRAPH		= NO
 CALLER_GRAPH		= NO
 
-ALIASES += flipper="\xrefitem flippers \"Flipper\" \"Flippers\""
+
+ALIASES += amp="&"
+ALIASES += note="<br><em><b>Note:</b></em>" Note="<br><em><b>Note:</b></em>" NOTE="<br><em><b>Note:</b></em>"
+ALIASES += NOTICE{1}="<br><em><b>NOTICE:</b> \1</em>"
+ALIASES += UNIMPLEMENTED{1}="<br><em><b>UNIMPLEMENTED:</b> \1</em>"
+ALIASES += REMINDER{1}="<br><em><b>REMINDER:</b> \1</em>"
 ALIASES += Wikipedia{1}="<a href='http://en.wikipedia.org/wiki/\1'>\1</a>"
+ALIASES +=  TODO="\xrefitem todo \"Issues\" \"Open Issues\" @b TODO"
+ALIASES += TODOS="\xrefitem todo \"Issues\" \"Open Issues\" @b TODOS"
+ALIASES +=   BUG="\xrefitem todo \"Issues\" \"Open Issues\" @b BUG"
+ALIASES +=  BUGS="\xrefitem todo \"Issues\" \"Open Issues\" @b BUGS"
+ALIASES +=     UNSTABLE="\xrefitem unstable \"Unstable\" \"Unstable API\" @b UNSTABLE"
+ALIASES +=  DISCOURAGED="\xrefitem unstable \"Unstable\" \"Unstable API\" @b DISCOURAGED"
+ALIASES +=   DEPRECATED="\xrefitem unstable \"Unstable\" \"Unstable API\" @b DEPRECATED"
+ALIASES +=   deprecated="\xrefitem unstable \"Unstable\" \"Unstable API\" @b DEPRECATED"
+ALIASES += EXPERIMENTAL="\xrefitem unstable \"Unstable\" \"Unstable API\" @b EXPERIMENTAL"
