--- a/Makefile.decl
+++ b/Makefile.decl
@@ -7,6 +7,7 @@ CLEANFILES=$(GENERATED_CLEANFILES)
 GENERATED_CLEANFILES=
 GENERATED=$(strip $(GENERATED_CLEANFILES))
 EXTRA_DIST=
+noinst_DATA=
 
 # Verbosity macros
 Q       = $(if $(findstring 1, $(V)) ,, @)
